Accordion: Correct Title Alignment
:disappointed:

--- a/widgets/accordion/styles/default.less
+++ b/widgets/accordion/styles/default.less
@@ -84,7 +84,7 @@
 				}
 				
 				& when ( @heading_title_align = right ) {
-					justify-content: end;
+					justify-content: flex-end;
 				}
 
 				width: 100%;
